--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,46 @@ h1 {
 .read-the-docs {
   color: #888;
 }
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  color:#000000;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: white;
+  border-color: #000000;
+  filter: drop-shadow(8px 5px 2px #000000);
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin-left: 30px;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
+canvas {
+  height: 256;
+  width: 256;
+  background-color: #ffffff;
+  cursor: none;
+}
