Implemented player turns
Added turns that change the sun/water levels. Each turn, the sun level detracts from the water level.

--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,6 @@ button:focus-visible {
 canvas {
   height: 256;
   width: 256;
-  background-color: #ffffff;
+  background-color: #0b6d28;
   cursor: none;
 }
